tests/invalid_inputs/sema/class_ctor_call_in_method.cpp

struct S {
	S() {

	}

	void f() {
		this->S();
	}
};
